hphp/hack/test/typecheck/new_inference/disjunctions/generics_sub_nullable_tvar.php.like_types.exp
File "generics_sub_nullable_tvar.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "generics_sub_nullable_tvar.php", line 4, characters 26-28:
Expected ~[unresolved] because it is an unenforceable type
File "generics_sub_nullable_tvar.php", line 6, characters 22-28:
But got null
File "generics_sub_nullable_tvar.php", line 11, characters 5-6:
Invalid argument (Typing[4110])
File "generics_sub_nullable_tvar.php", line 4, characters 26-28:
Expected ~[unresolved] because it is an unenforceable type
File "generics_sub_nullable_tvar.php", line 10, characters 22-25:
But got null
